# snapd-rs-artie

./: .gitignore  Cargo.toml  ENDPOINTS.md  README.md  workshop.yaml
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  security.yml  unit-tests.yml
.workshop/: snapd-rs.yaml
libprompting/: Cargo.toml  README.md
snap/: snapcraft.yaml
snap-rat/: Cargo.toml
snap-rat/src/: app.rs  keyboard.rs  layout.rs  lib.rs  main.rs  mouse.rs  symbols.rs
snap-rat/src/browse/: render.rs
snap-rat/src/changes/: render.rs
snap-rat/src/channels/: mod.rs  render.rs
snap-rat/src/components/: mod.rs  render.rs
snap-rat/src/confirm/: render.rs  state.rs
snap-rat/src/connections/: render.rs  state.rs
snap-rat/src/detail/: render.rs
snap-rat/src/help/: render.rs
snap-rat/src/manage/: render.rs  state.rs
snap-rat/src/services/: mod.rs  render.rs
snap-rat/src/slots/: render.rs  state.rs
snapd-rs/: Cargo.toml  VALUES.md
snapd-rs-artie/: Cargo.toml  README.md  VALUES.md
snapd-rs-artie/src/: client.rs  error.rs  types.rs
snapd-rs-artie/src/api/: aliases.rs  apps.rs  assertions.rs  auth.rs  changes.rs  confdb.rs  debug.rs  icons.rs  interfaces.rs  mod.rs  model.rs  notices.rs  prompting.rs  quotas.rs  recovery_keys.rs  secureboot.rs  snapctl.rs  snaps.rs  snapshots.rs  store.rs  system_info.rs  systems.rs  themes.rs  validation_sets.rs  volumes.rs
snapd-rs-artie/tests/: README.md  integration_test.rs  integration_tests.rs  mock_snapd.rs
snapd-rs/src/: client.rs  error.rs  lib.rs  types.rs
snapd-rs/src/api/: aliases.rs  apps.rs  assertions.rs  changes.rs  confdb.rs  debug.rs  interfaces.rs  mod.rs  model.rs  notices.rs  prompting.rs  quotas.rs  recovery_keys.rs  snapctl.rs  snaps.rs  snapshots.rs  store.rs  system_info.rs  systems.rs  themes.rs  validation_sets.rs  volumes.rs
snapd-rs/tests/: integration_tests.rs
