[workspace]
members = [
    "snapd-rs",
    "snap-rat",
    "libprompting",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
libc = "0.2"
ratatui-image = { version = "11", default-features = false, features = ["image-defaults", "crossterm", "chafa-static"] }
image = "0.25"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
url = "2"
strum = { version = "0.27", features = ["derive"] }
snapd-rs = { path = "snapd-rs" }
