[workspace]
members = [
    "snapd-rs-artie",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
url = "2"
strum = { version = "0.27", features = ["derive"] }
