[workspace]
members = [
    "snapd-rs-artie",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
url = "2"
strum = { version = "0.27", features = ["derive"] }
