[package]
name = "snapd-rs-artie"
version.workspace = true
edition.workspace = true
description = "Unnofficial Rust client library for the snapd REST API"
license = "GPL-3.0"
repository = "https://github.com/artiepoole/snapd-rs-artie"
keywords = ["snapd", "snap", "async", "client", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true
strum.workspace = true
